<resources>
    <string name="app_name">ICADWorkS</string>
    <string name="app_abb">Abbreviations Used</string>
    <string name="tag_line">Connecting I&amp;CAD Telangana</string>
    <string name="app_desc">ICAD WorkS - eTool for Monitoring construction of Off Take Sluices (OTs) and Check Dams (CDs)</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="font_name_source_opensans">OpenSans</string>
    <string name="txt_login">Login</string>
    <string name="something">Something went wrong, Please try again</string>
    <string name="something_loc">Something went wrong with location</string>
    <string name="update">New version available, Please update</string>
    <string name="server">Server not responding, Please try again</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="user_name_validation">Please enter username</string>
    <string name="pwd_validation">Please enter password</string>
    <string name="no_internet">"No network connectivity found, Please check your network"</string>

    <string-array name="stages_data">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
    <string name="title_activity_otmap">Map</string>
    <string name="please_check_internet">"No network connectivity found, Please check your network"</string>
    <string name="view_photo">View Photo</string>
    <string name="loc">Please grant all permissions</string>
    <string name="share">Share</string>
    <string name="user_manual">User Manual</string>

    <string name="ot">OTs</string>
    <string name="cd">CDs</string>
    <string name="no_records_found">No records found</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="ot_count">OT Count</string>
    <string name="bill_status">Bill Status</string>
    <string name="sent_amount">Sent Amount</string>
    <string name="agreement_amount">Agreement Amount</string>
    <string name="agreement_no">Agreement No</string>
    <string name="technical_sanction_no">Technical Sanction No</string>
    <string name="agency_name">Agency Name</string>

</resources>
