<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/dimen_8dp"
    tools:context=".view.LoginActivity">


    <RelativeLayout
        android:id="@+id/mainRL"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <cgg.gov.in.icadworks.custom.CustomFontTextView
            android:layout_centerHorizontal="true"
            android:id="@+id/appName"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            app:textStyle="@integer/bold" />

        <cgg.gov.in.icadworks.custom.CustomFontTextView
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/appName"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/tag_line"
            android:textColor="@color/gray_light" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content">

        <cgg.gov.in.icadworks.custom.CustomFontEditText
            android:id="@+id/userNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:hint="@string/user_name"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

        <cgg.gov.in.icadworks.custom.CustomFontEditText
            android:id="@+id/pwdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>


        <cgg.gov.in.icadworks.custom.CustomFontTextView
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:background="@drawable/btn_background"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/txt_login"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:textStyle="@integer/regular" />

        <cgg.gov.in.icadworks.custom.CustomFontTextView
            android:id="@+id/userManualTV"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/user_manual"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dimen_40dp"
        android:layout_marginRight="@dimen/dimen_40dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/footer" />
    </LinearLayout>

    <ProgressBar
        android:indeterminateTint="@android:color/holo_orange_dark"
        android:id="@+id/progress"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
