<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_8dp"
    android:layout_marginTop="@dimen/dimen_8dp"
    android:layout_marginRight="@dimen/dimen_8dp"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cardItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_8dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:paddingLeft="@dimen/dimen_4dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@android:drawable/ic_menu_manage"
                    android:visibility="gone" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="1"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:orientation="horizontal">

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/agency_name"
                            android:textColor="@color/colorPrimary" />

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:id="@+id/agencyNameTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:orientation="horizontal">


                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/technical_sanction_no"
                            android:textColor="@color/colorPrimary" />

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_gravity="center"
                            android:id="@+id/tecSanNumTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:orientation="horizontal">


                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/agreement_no"
                            android:textColor="@color/colorPrimary" />

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:id="@+id/aggNumTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:orientation="horizontal">


                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/agreement_amount"
                            android:textColor="@color/colorPrimary" />

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_gravity="center"
                            android:id="@+id/aggAmtTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:orientation="horizontal">


                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/sent_amount"
                            android:textColor="@color/colorPrimary" />

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:id="@+id/sentAmtTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:orientation="horizontal">


                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/paid_amount"
                            android:textColor="@color/colorPrimary" />

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:id="@+id/paidAmtTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:orientation="horizontal">


                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/ot_count"
                            android:textColor="@color/colorPrimary" />

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:id="@+id/otCountTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:orientation="horizontal">


                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/bill_status"
                            android:textColor="@color/colorPrimary" />

                        <cgg.gov.in.icadworks.custom.CustomFontTextView
                            android:id="@+id/billStatusTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>